feat : added swagger for employee API
