# swagger/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/register"
+                            "$ref": "#/definitions/Register"
                         }
                     }
                 ],
@@ -59,7 +59,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/login"
+                            "$ref": "#/definitions/Login"
                         }
                     }
                 ],
@@ -72,8 +72,183 @@
                     }
                 }
             }
-        }
+        },
+        "/addEmployee": {
+            "post": {
+              "tags": [],
+              "description": "Add new employee",
+              "parameters": [
+                {
+                  "name": "add employee",
+                  "in": "body",
+                  "required": true,
+                  "schema": {
+                    "$ref": "#/definitions/Employee"
+                  }
+                }
+              ],
+              "responses": {
+                "201": {
+                  "description": "Created"
+                },
+                "400": {
+                  "description": "Bad Request"
+                },
+                "500": {
+                  "description": "Internal Server Error"
+                }
+              },
+              "security": [
+                {
+                  "JWT": []
+                }
+              ]
+            }
+          },
+          "/getEmployees": {
+            "get": {
+              "tags": [],
+              "description": "get all employees",
+              "parameters": [],
+              "responses": {
+                "200": {
+                  "description": "Ok"
+                },
+                "400": {
+                  "description": "Bad Request"
+                },
+                "401": {
+                  "description": "Unauthorized"
+                },
+                "500": {
+                  "description": "Internal Server Error"
+                }
+              },
+              "security": [
+                {
+                  "JWT": []
+                }
+              ]
+            }
+          },
+          "/getEmployee/{empId}": {
+            "get": {
+              "tags": [],
+              "description": "get employee by id",
+              "parameters": [
+                {
+                  "name": "empId",
+                  "in": "path",
+                  "required": true,
+                  "type": "string"
+                }
+              ],
+              "responses": {
+                "200": {
+                  "description": "Ok"
+                },
+                "400": {
+                  "description": "Bad Request"
+                },
+                "401": {
+                  "description": "Unauthorized"
+                },
+                "404": {
+                  "description": "Not Found"
+                },
+                "500": {
+                  "description": "Internal Server Error"
+                }
+              },
+              "security": [
+                {
+                  "JWT": []
+                }
+              ]
+            }
+          },
+          "/updateEmployee/{empId}": {
+            "put": {
+              "tags": [],
+              "description": "Update employee data",
+              "parameters": [
+                {
+                  "name": "empId",
+                  "in": "path",
+                  "required": true,
+                  "type": "string"
+                },
+                {
+                  "name": "new employeeDetails",
+                  "in": "body",
+                  "required": true,
+                  "schema": {
+                    "$ref": "#/definitions/Employee"
+                  }
+                }
+              ],
+              "responses": {
+                "200": {
+                  "description": "OK"
+                },
+                "400": {
+                  "description": "Bad Request"
+                },
+                "401": {
+                  "description": "Unauthorized"
+                },
+                "404": {
+                  "description": "Not Found"
+                },
+                "500": {
+                  "description": "Internal Server Error"
+                }
+              },
+              "security": [
+                {
+                  "JWT": []
+                }
+              ]
+            }
+          },
+          "/deleteEmployee/{empId}": {
+            "delete": {
+              "tags": [],
+              "description": "Delete employee data",
+              "parameters": [
+                {
+                  "name": "empId",
+                  "in": "path",
+                  "required": true,
+                  "type": "string"
+                }
+              ],
+              "responses": {
+                "200": {
+                  "description": "OK"
+                },
+                "400": {
+                  "description": "Bad Request"
+                },
+                "401": {
+                  "description": "Unauthorized"
+                },
+                "404": {
+                  "description": "Not Found"
+                },
+                "500": {
+                  "description": "Internal Server Error"
+                }
+              },
+              "security": [
+                {
+                  "JWT": []
+                }
+              ]
+            }
+          }
     },
+    
     "securityDefinitions": {
         "JWT": {
             "type": "apiKey",
@@ -82,7 +257,7 @@
         }
     },
     "definitions": {
-        "register": {
+        "User": {
             "type": "object",
             "properties": {
                 "firstName": {
@@ -99,7 +274,33 @@
                 }
             }
         },
-        "login": {
+        "Employee": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string"
+              },
+              "email": {
+                "type": "string"
+              },
+              "password": {
+                 "type": "string"
+              },
+              "phoneNumber":{
+                  "type": "string"
+              },
+              "department":{
+                  "type": "string"
+              },
+              "salary": {
+                  "type": "number"
+              },
+              "company":{
+                  "type": "string"
+              }          
+            }
+          },
+        "Login": {
             "type": "object",
             "properties": {
                 "email": {
